feat: allergy for a user
