# src/main/java/com/genfood/foodgenback/endpoint/controller/AllergyController.java
@@ -3,13 +3,15 @@ package com.genfood.foodgenback.endpoint.controller;
 import com.genfood.foodgenback.endpoint.rest.mapper.AllergyMapper;
 import com.genfood.foodgenback.endpoint.rest.model.Allergy;
 import com.genfood.foodgenback.service.AllergyService;
+import jakarta.servlet.http.HttpServletRequest;
 import java.util.List;
 import java.util.stream.Collectors;
 import lombok.AllArgsConstructor;
-import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PutMapping;
+import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
@@ -29,6 +31,14 @@ public class AllergyController {
   @GetMapping("/allergy/{user_id}")
   public List<Allergy> findAllergyByUserId(@PathVariable(name = "user_id") String userId) {
     return allergyService.findAllergyByUserId(userId).stream()
+        .map(allergyMapper::toDto)
+        .collect(Collectors.toUnmodifiableList());
+  }
+
+  @PutMapping("/allergy")
+  public List<Allergy> crupdateAllergies(
+      HttpServletRequest request, @RequestBody List<String> allergies) {
+    return allergyService.crUpdateAllergies(request, allergies).stream()
         .map(allergyMapper::toDto)
         .collect(Collectors.toUnmodifiableList());
   }
